# musashi-ros2-humble

./: README.md
basestation/: README.md
basestation/field_viewer/: package.xml  setup.cfg  setup.py
basestation/musashi_rqt_player_server/: package.xml  plugin.xml  setup.cfg  setup.py
basestation/musashi_rqt_refereebox_client/: package.xml  plugin.xml  setup.cfg  setup.py
basestation/player_server/: plugin.xml  setup.py
basestation/refereebox_client/: README.md  plugin.xml  setup.py
behavior/: README.md
coachbox/: README.md
coachbox/player_controller/: package.xml  plugin.xml  setup.cfg  setup.py
coachbox/player_server/: package.xml  plugin.xml  setup.py
coachbox/refereebox_client/: package.xml  plugin.xml  setup.cfg  setup.py
hardware/: README.md
hardware/musashi_camera/: package.xml  setup.cfg  setup.py
hardware/musashi_move_base/: CMakeLists.txt  package.xml
hardware/musashi_movebase/: CMakeLists.txt  package.xml
localization/: README.md
musashi_coachbox/: CMakeLists.txt  README.md  package.xml  plugin.xml
musashi_coachbox/resource/: coachbox_widget.ui
musashi_coachbox/scripts/: musashi_coachbox  refereebox_client
musashi_coachbox/src/musashi_coachbox/: commands.py  musashi_coachbox.py  musashi_coachbox_plugin.py  musashi_coachbox_widget.py  refbox_client.py  refereebox_client_plugin.py  refereebox_client_widget.py
musashi_description/: setup.py
musashi_description/launch/: player_display.py
musashi_description/mesh/: Musashi_tmp.stl  (+1 more)
musashi_msgs/: CMakeLists.txt  README.md  package.xml
perception/: README.md
(+49 files in other folders)
